--- a/index.html
+++ b/index.html
@@ -8,6 +8,47 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
   </head>
+  <!-- <body>
+    <div class="container">
+      <div class="logo-container">
+        <h1>CarQuery</h1>
+        <img class="illustration" src="illustration.png" alt="CarQuery logo" />
+      </div>
+      <div class="container-input">
+        <label class="label" for="car-make">Enter Car Make:</label>
+        <input
+          class="input"
+          type="text"
+          id="car-make"
+          placeholder="ex:mercedes-benz"
+        />
+        <label class="label" for="car-model">Enter Car Model:</label>
+        <input class="input" type="text" id="car-model" placeholder="C" />
+        <label class="label" for="car-year">Enter Car Year:</label>
+        <input
+          class="input"
+          type="text"
+          id="car-year"
+          placeholder="optional*"
+        />
+        <button id="search-button">Search</button>
+        <div class="loading" id="loading-icon" style="display: none">
+          <img src="./loading.png" alt="" class="png" />
+        </div>
+      </div>
+    </div>
+    <div id="model-details" style="display: none">
+      <div id="model-details-content"></div>
+    </div>
+    <div class="note-container">
+      <p class="note">
+        Note: 👀 Please keep in mind that this website is using a free API
+        service, which may have some limitations. It is possible that you may
+        not find every vehicle you are looking for in the database.
+      </p>
+    </div>
+  </body> -->
+
   <body>
     <div class="container">
       <div class="logo-container">
@@ -22,10 +63,8 @@
           id="car-make"
           placeholder="ex:mercedes-benz"
         />
-        <br />
         <label class="label" for="car-model">Enter Car Model:</label>
         <input class="input" type="text" id="car-model" placeholder="C" />
-        <br />
         <label class="label" for="car-year">Enter Car Year:</label>
         <input
           class="input"
@@ -33,20 +72,21 @@
           id="car-year"
           placeholder="optional*"
         />
-        <br />
         <button id="search-button">Search</button>
+        <div class="loading" id="loading-icon" style="display: none">
+          <img src="./loading.png" alt="Loading" class="png" />
+        </div>
       </div>
+    </div>
+    <div id="model-details" style="display: none">
+      <div id="model-details-content"></div>
     </div>
     <div class="note-container">
       <p class="note">
-        Note:) Please keep in mind that this website is uses a free API service
-        and may have some limitations It is possible that you maynot find every
-        vehicle you are looking for in the database.
+        Note: 👀 Please keep in mind that this website is using a free API
+        service, which may have some limitations. It is possible that you may
+        not find every vehicle you are looking for in the database.
       </p>
-    </div>
-
-    <div id="model-details" style="display: none">
-      <div id="model-details-content"></div>
     </div>
   </body>
 </html>
